Add Bolognese Description and Ingredients to bolognese.html

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -7,5 +7,29 @@
     <body>
         <h1>Bolognese</h1>
         <img src="../images/spaghetti-bolognese.jpg">
+        <h3>Description</h3>
+        <p>Our spaghetti bolognese is the ideal weekday meal as it's super easy and quick to make. This bolognese dish is simple, but full of flavour. Bon Appétit!</p>
+        <h3>Ingredients</h3>
+        <p><em>Serves 6</em></p>
+        <ul>
+            <li>1 tbsp olive oil</li>
+            <li>1 large onion, finely chopped</li> 
+            <li>2 celery sticks, finely chopped</li>
+            <li>2 carrots, finely chopped</li>
+            <li>half an orange bell pepper</li>
+            <li>6 garlic cloves, finely chopped</li>
+            <li>2 x 400g tins plum tomatoes</li>
+            <li>2 tbsp tomato purée</li>
+            <li>3 bay leaves</li>
+            <li>2 aubergines</li>
+            <li>500g minced meat of your choice</li>
+            <li>100ml red wine</li>
+            <li>3 tbsp italian herb seasoning</li>
+            <li>1 tbsp bouillon powder</li>
+            <li>sea salt</li>
+            <li>400g spaghetti</li>
+            <li>parmesan</li>
+            <li>fresh basil</li>
+        </ul>
     </body>
 </html>
