Edit Aubergines Line in Ingredients and Add Method

--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -21,15 +21,27 @@
             <li>2 x 400g tins plum tomatoes</li>
             <li>2 tbsp tomato purée</li>
             <li>3 bay leaves</li>
-            <li>2 aubergines</li>
+            <li>2 aubergines chopped into small/medium sized chunks</li>
             <li>500g minced meat of your choice</li>
             <li>100ml red wine</li>
             <li>3 tbsp italian herb seasoning</li>
-            <li>1 tbsp bouillon powder</li>
+            <li>2 tbsp bouillon powder</li>
             <li>sea salt</li>
             <li>400g spaghetti</li>
             <li>parmesan</li>
             <li>fresh basil</li>
         </ul>
+        <h3>Method</h3>
+        <ol>
+            <li>Heat the oven to 200C and lightly oil a tray before adding aubergine, making sure to spread the pieces out. Roast for 20 minutes, turning at the halfway mark.</li>
+            <li>Heat a large sized pan on a high flame, before adding the minced meat. Lower the heat and allow the meat to brown all over before removing from the pan and storing in a bowl.</li>
+            <li>Return the pan to the heat and add olive oil, followed by the onion, carrot, celery, pepper and bay leaves. Cook until the vegetables soften.</li>
+            <li>Add garlic and cook until slightly golden.</li>
+            <li>Add minced meat, tomato purée, tinned tomatoes, bouillon and red wine. Then add herb seasoning and salt to your taste. Using a wooden spoon break up the plum tomatoes and stir well.</li>
+            <li>Bring to the boil, reduce to a gentle simmer and cover with a lid. Cook for 45 minutes stirring occasionally, until you have a rich, thick sauce.</li>
+            <li>Add the roasted aubergines and cook for another 30 minutes.</li>
+            <li>When the sauce is nearly finished, cook 400g spaghetti following the pack instructions.</li>
+            <li>Drain the spaghetti and drizzle with a bit of olive oil. Serve with the bolognese sauce, parmesan and fresh basil.</li>
+        </ol>
     </body>
 </html>
