Add Mushroom Risotto Link to index.html and Amend 'repetitively' to 'repeatedly' in mushroom-risotto.html Method

--- a/recipes/mushroom-risotto.html
+++ b/recipes/mushroom-risotto.html
@@ -33,7 +33,7 @@
             <li>Add the chestnut mushrooms, season with salt and pepper and cook until soft.</li>
             <li>Separate the porcini mushrooms from the liquid and add them to the chestnut mushrooms before adding risotto rice and italian herb seasoning.</li>
             <li>When there is no moisture left in the pan, pour in the white wine and let it boil away.</li> 
-            <li>Once the wine has evaporated, add about 100ml of the stock/mushroom liquid. Simmer the rice, stirring often, until the rice has absorbed all the liquid. Then add about the same amount of stock again and continue to simmer and stir. Do this repetitively until it becomes creamy, plump and tender, but still with a bit of bite.</li>
+            <li>Once the wine has evaporated, add about 100ml of the stock/mushroom liquid. Simmer the rice, stirring often, until the rice has absorbed all the liquid. Then add about the same amount of stock again and continue to simmer and stir. Do this repeatedly until it becomes creamy, plump and tender, but still with a bit of bite.</li>
             <li>Continue stirring until the rice is cooked and add salt if necessary. If the rice is still undercooked and you have run out of stock add some hot water.</li> 
             <li>When cooked, take the pan off the heat, add 25g butter and scatter over some grated parmesan or Grana Padano cheese and half a handful of chopped parsley leaves.</li>
             <li>Serve with additional parmesan if desired.</li>
