--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/bolognese.html">Bolognese</a>
+        <a href="recipes/mushroom-risotto.html">Mushroom Risotto</a>
     </body>
 </html>
