--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head> 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/bolognese.html">Bolognese</a>
-        <a href="recipes/mushroom-risotto.html">Mushroom Risotto</a>
+        <ul> 
+            <li><a href="recipes/bolognese.html">Bolognese</a></li>
+            <li><a href="recipes/mushroom-risotto.html">Mushroom Risotto</a></li>
+        </ul>
     </body>
 </html>
