Create style.css, Edit title box on style.css, Amend title from Odin Recipes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes You Have to Try</title>
+        <link rel="stylesheet" href="style.css"/>
     </head> 
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="title-box"> 
+            <h1>Simone's Recipes</h1>
+        </div>
         <ul> 
             <li><a href="recipes/bolognese.html">Bolognese</a></li>
             <li><a href="recipes/mushroom-risotto.html">Mushroom Risotto</a></li>
